<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gregmarsh.pressforce.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/pressfitgraphic"
        android:adjustViewBounds="true"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText"
                        android:layout_column="0"
                        android:gravity="end"
                        android:width="75dp"
                        android:text=".25" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="       "
                        android:id="@+id/textView"
                        android:layout_column="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inside_diameter"
                        android:id="@+id/textView2"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText2"
                        android:layout_column="0"
                        android:gravity="end"
                        android:width="75dp"
                        android:text=".5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outside_diameter"
                        android:id="@+id/textView3"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText3"
                        android:layout_column="0"
                        android:gravity="end"
                        android:width="75dp"
                        android:text=".31" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transition_diameter"
                        android:id="@+id/textView4"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText4"
                        android:layout_column="0"
                        android:gravity="end"
                        android:width="75dp"
                        android:text=".625" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_length"
                        android:id="@+id/textView5"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:layout_column="0"
                        android:layout_gravity="right"
                        android:gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diameter_interference"
                        android:id="@+id/textView6"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner2"
                        android:layout_column="0"
                        android:layout_gravity="right"
                        android:gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/material"
                        android:id="@+id/textView7"
                        android:layout_column="2" />
                </TableRow>

                <!-- Radio Button Option -->

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_column="0">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"
                            android:id="@+id/radioButton"
                            android:checked="true" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:id="@+id/radioButton2"
                            android:checked="false" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lubricated"
                        android:id="@+id/textView8"
                        android:layout_gravity="center_vertical"
                        android:layout_column="2" />
                </TableRow>

                <!--  ***********  Calculate Results  **********  -->

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:text="@string/calculate"
                        android:id="@+id/button"
                        android:layout_column="0"
                        android:layout_span="3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView9"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coefficient_friction"
                        android:id="@+id/textView10"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView11"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modulus_elasticity"
                        android:id="@+id/textView12"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView13"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inside_radius"
                        android:id="@+id/textView14"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView15"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outside_radius"
                        android:id="@+id/textView16"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView17"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transition_radius"
                        android:id="@+id/textView18"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView19"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radial_interference"
                        android:id="@+id/textView20"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView21"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_pressure"
                        android:id="@+id/textView22"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView23"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stress_t"
                        android:id="@+id/textView24"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView25"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stress_r"
                        android:id="@+id/textView26"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView27"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stress_kpsi"
                        android:id="@+id/textView28"
                        android:layout_column="2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/textView29"
                        android:layout_column="0"
                        android:layout_gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/press_force"
                        android:id="@+id/textView30"
                        android:layout_column="2" />
                </TableRow>














            </TableLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
